<resources>
    <string name="app_name">LayoutExample</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button2</string>
    <string name="button5">button3</string>
    <string name="type">Type sonmething</string>
    <string name="text">This is a TextView</string>
    <string name="back">Back</string>
</resources>